- [V] 分頁查詢 + 排序     - [V] dotnet webapi efcore + dynamic linq 後端 efcore + public static         - [V] input: conditions:object + orderCol:string + orderDesc:bool + page:number + pageSize:number         - [V] output: totalCount:number list:any[]     - [V] custom-paginator.component 前端 分頁 帶入 後端 public static 參數帶入&顯示         - [V] 封裝 primeng paginator ，可以記錄 conditions:object + orderCol:string + orderDesc:bool + page:number + pageSize:number ，search() 時更新上述變數後交由後端api查詢，loadDatas() 時反向還原上一次查詢條件並根據還原後的條件再次查詢，自動計算 totalCount:number、pageSize:number 來判斷共有幾頁 - [V] whereif 處理使用者查詢條件
