# ClientApp/src/app/api/models.ts
@@ -2,4 +2,3 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export type { WeatherForecast } from './models/weather-forecast';
