# Controllers/WeatherForecastController.cs
@@ -1,4 +1,6 @@
-﻿using Microsoft.AspNetCore.Mvc;
+﻿using Microsoft.AspNetCore.Http.HttpResults;
+using Microsoft.AspNetCore.Mvc;
+using System.ComponentModel.DataAnnotations;
 
 namespace TaskManager.Controllers;
 
@@ -18,15 +20,31 @@ public class WeatherForecastController : ControllerBase
         _logger = logger;
     }
 
+    [ProducesResponseType(typeof(object),StatusCodes.Status200OK)]
     [HttpGet]
-    public IEnumerable<WeatherForecast> Get()
+    public IActionResult Get(
+        [FromQuery] WeatherForecast conditions,
+        [FromQuery,Required] QueryParameters parameters)
     {
-        return Enumerable.Range(1, 5).Select(index => new WeatherForecast
+        IQueryable<WeatherForecast> datas = Enumerable.Range(1, 5).Select(index => new WeatherForecast
         {
             Date = DateOnly.FromDateTime(DateTime.Now.AddDays(index)),
             TemperatureC = Random.Shared.Next(-20, 55),
             Summary = Summaries[Random.Shared.Next(Summaries.Length)]
         })
-        .ToArray();
+        .ToArray().AsQueryable();
+
+        var tmp = datas
+        .WhereIf(conditions.TemperatureC,t => t.TemperatureC >= conditions.TemperatureC);
+
+        int totalCount = tmp.Count();
+
+        var items = tmp
+            .ApplySorting(parameters.OrderColumn, parameters.OrderDescending)
+            .ApplyPaging(parameters.Page, parameters.PageSize)
+            .ToList();
+
+
+        return Ok(new { totalCount, items }); ;
     }
 }
